[package]
name = "bevylone"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
